{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "c1cc24b7-9f58-44d8-987c-e9da372bcbfe",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "dcb95e20-3830-434d-b7ca-34e333345ac1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "cef9e4bb-d2a8-4d67-849d-00b2f48d7f1b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e0bb7f70-8d76-460b-bc77-07867cb2a692",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell1",
                    "type": "Button",
                    "id": "f726c55c-892d-4ad7-9fea-26e3dbbae705",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell2",
                    "type": "Button",
                    "id": "24ca7431-5d43-44d1-a1c8-303a13e5dbb0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spell3",
                    "type": "Button",
                    "id": "cac6beff-9c73-433f-9f19-d05c2dddfc8d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "a2c000bc-78ec-4522-a094-407c0abbb694",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwapWeapon",
                    "type": "Button",
                    "id": "b6c46ada-ec3a-4671-a68a-1526155f9b1a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Map",
                    "type": "Button",
                    "id": "9c3eb5cb-92f5-438a-aef9-9836fa0977f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LockMap",
                    "type": "Button",
                    "id": "2826b482-6e7e-4af9-8098-8523f4ec7c20",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Portal",
                    "type": "Button",
                    "id": "254c25d1-8b41-4097-a449-db452b2cb230",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Potion1",
                    "type": "Button",
                    "id": "b7f93244-0833-476d-8521-3989e0c863dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.75)",
                    "initialStateCheck": false
                },
                {
                    "name": "Potion2",
                    "type": "Button",
                    "id": "ac876ba9-71f8-4c8c-be7f-d36e33789bf2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.75)",
                    "initialStateCheck": false
                },
                {
                    "name": "Potion3",
                    "type": "Button",
                    "id": "1979904b-988f-4da2-9758-d49594b262c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.75)",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "ef427e60-8644-489b-9fb4-cf11c5127c16",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "ddd1dc6d-22da-4ff3-9cd0-36712931e5bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Build",
                    "type": "Button",
                    "id": "606f5ef0-65a4-4a13-8427-7ad6370f21d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "e60ac59d-43e0-4a7f-80ff-5f8c37c7c03d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "f57d33f6-321e-419e-ab48-ef1fe37cd199",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8eb209d3-8732-4d25-b39c-e75a62c00494",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4f19a3df-f534-47d6-87b7-b0738ccd0a56",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "91f9511a-0048-4bf1-8ef9-feab68db8936",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fa7b4a5f-7833-4286-b4fe-06e8a5d4935a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "37450773-79a5-4041-8792-1c5038cf5ccd",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "AxisDeadzone(min=0.02,max=0.925)",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7105fe5-1abe-4f6b-a46d-f69d985c2cbc",
                    "path": "<Keyboard>/space",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93abc183-5124-41bb-a413-cdfecd1635e6",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "382aa982-8542-411c-9760-dc0a57d00259",
                    "path": "<Keyboard>/z",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Spell1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "476008f0-3252-4b9d-a766-4dd6682dd875",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Spell1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "586ffd8a-86fa-4edf-b65e-7dd11d859a6f",
                    "path": "<Keyboard>/x",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Spell2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19b734d8-6f4a-4084-a864-e1f78c5f128a",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Spell2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2dbaf907-f642-4c79-88be-d60ddec155e0",
                    "path": "<Keyboard>/c",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Spell3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "599465be-9f4c-4302-ac95-9c17556ab1ff",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6728e23-0ab1-4516-962c-e030c22636ea",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19461484-d4af-4a1b-a8c8-09b11495f955",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "430395a0-34bf-4572-b2af-9544364264c1",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "AxisDeadzone(min=0.7)",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6dea3aca-09d9-45c7-9566-c46817c3f979",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b196f74b-cb9e-44a2-a2e6-f28988b9b543",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "187abd34-869c-427a-be19-94e10395fb4d",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Map",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5bc2cb1a-da0a-46c2-b2bc-a59295ba765c",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Map",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ff17942-f6a6-4d26-9bce-7aae809efe99",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5887d4cf-7e08-4929-bf7e-52b1f17a7e9d",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62ac1225-c994-4272-964a-f78a80ccaab8",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Portal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e27c5fb3-df58-4a10-a61f-ce402bb5958c",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Portal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3104dc57-c2f7-478b-976f-ef1b4e344150",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Potion1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d88d90c-370d-4617-bb2d-4d81604fd5e4",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "AxisDeadzone(min=0.5)",
                    "groups": "",
                    "action": "Potion1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22b764c4-3eef-4869-83c7-9e081655886a",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Potion2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c238a1d6-e3cf-4e34-8b2d-b4132a1b2b1e",
                    "path": "<DualSenseGamepadHID>/dpad/up",
                    "interactions": "",
                    "processors": "AxisDeadzone(min=0.5)",
                    "groups": "",
                    "action": "Potion2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29e5b71d-ac12-49e6-8926-c57eaec18707",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Potion3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3ebe927-340a-4867-bdc3-459fd1424a9d",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "AxisDeadzone(min=0.5)",
                    "groups": "",
                    "action": "Potion3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de41309c-3e16-445b-9a7c-4271daa4b6e6",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "763c950a-a233-40b4-9c87-bda3d3d87048",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e408c007-34aa-4029-8a08-06b1d5a24348",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Spell3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4a1b8b3-8fd2-4ebe-a9ed-37b9f69642f8",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1d3ab3a-12cc-405f-8dd2-903352bffd4d",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1adcc6f0-9255-443e-ae50-4090ad8401ce",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Build",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73fc492d-5ca2-42c2-8be0-56575e5ede4d",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "AxisDeadzone(min=0.7)",
                    "groups": "",
                    "action": "Build",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "442a4397-7365-4e17-aa3c-9bccf86285fe",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}